# mmals-ecospec

./: CHANGELOG.md  CITATION.cff  Makefile  README.md  pyproject.toml
configs/: default.yaml
docs/: CLAIM_LEDGER.md  IMPLEMENTATION_ROADMAP.md  RC2O_MAPPING.md  SPECIFICATION.md  TRACE_SCHEMA.json
examples/: toy_demo.py
notebooks/: MMALS_EcoSpec_1_0_Smoke.ipynb
paper/: main.tex  references.bib
src/mmals_ecospec/: __init__.py  audit.py  context.py  controller.py  memory.py  rl.py  routing.py  types.py
src/mmals_ecospec/adapters/: __init__.py  rc2o.py
tests/: test_contracts.py
